Fixed grid gap

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -21,7 +21,7 @@
 		width: 95vw;
 		display: grid;
 		grid-template-columns: 1fr, repeat(4);
-		gap: 10px;
+		gap: 8px;
 	}
 
 	.header {
